content/Firewall-Iptables/firewall/iptables
# Generated by iptables-save v1.4.21 on Sun Oct  2 21:49:03 2016
*nat
:PREROUTING ACCEPT [2:133]
:INPUT ACCEPT [2:133]
:OUTPUT ACCEPT [42:2961]
:POSTROUTING ACCEPT [37:2626]
-A PREROUTING -i enp0s9 -p tcp -m tcp --dport 22000 -j DNAT --to-destination 192.168.1.2:22
-A PREROUTING -i enp0s9 -p tcp -m tcp --dport 23000 -j DNAT --to-destination 192.168.1.3:22
-A PREROUTING -i enp0s9 -p tcp -m tcp --dport 24000 -j DNAT --to-destination 192.168.1.4:22
-A POSTROUTING -s 192.168.1.0/24 -j MASQUERADE
-A POSTROUTING -s 192.168.56.0/24 -j MASQUERADE
COMMIT
# Completed on Sun Oct  2 21:49:03 2016
# Generated by iptables-save v1.4.21 on Sun Oct  2 21:49:03 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -d 127.0.0.1/32 -j ACCEPT
-A INPUT -s 192.168.1.2/32 -p tcp -m tcp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.1.2/32 -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.56.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i enp0s3 -p tcp -m multiport --sports 80,443 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i enp0s8 -p icmp -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p icmp -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p tcp -m tcp --dport 3128 -m comment --comment "Liberar porta default do squid" -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -d 192.168.1.0/24 -p tcp -m multiport --sports 80,443 -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.1.0/24 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -p tcp -m iprange --dst-range 192.168.1.2-192.168.1.4 -m tcp --dport 22 -j ACCEPT
-A FORWARD -p tcp -m iprange --src-range 192.168.1.2-192.168.1.4 -m tcp --sport 22 -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -p tcp -m tcp --sport 1024:65535 -m multiport --dports 20,21 -j ACCEPT
-A FORWARD -d 192.168.1.0/24 -p tcp -m tcp --dport 1024:65535 -m multiport --sports 20,21 -j ACCEPT
-A FORWARD -d 192.168.1.0/24 -p tcp -m tcp --dport 1024:65535 -m multiport --sports 110,995,143,993 -m comment --comment "Liberar imap e pop" -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -p tcp -m tcp --sport 1024:65535 -m multiport --dports 110,995,143,993 -m comment --comment "Lberar imap e pop" -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 587 -m comment --comment "Liberar trafego de email p/ o postfix" -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 587 -m comment --comment "Lberar trafego de email p/ o postfix" -j ACCEPT
-A OUTPUT -d 192.168.1.2/32 -p tcp -m tcp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.1.2/32 -p udp -m udp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -d 192.168.1.0/24 -p icmp -j ACCEPT
-A OUTPUT -d 192.168.1.0/24 -p tcp -m tcp --sport 3128 -m comment --comment "Liberar porta default do squid" -j ACCEPT
-A OUTPUT -p udp -m udp --sport 53 --dport 1024:65535 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 53 --dport 1024:65535 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sun Oct  2 21:49:03 2016
